--- a/principal.html
+++ b/principal.html
@@ -7,20 +7,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!--FONTE-->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"/> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"/> 
     <!--FONTE-->
     <title>To Do</title>
   </head>
-  <body>
+  <body class="light-mode"> <!-- Removi a segunda tag body -->
 
     <div class="container">
       <input class="input-task" placeholder="Minhas tarefas..." />
       <input class="button-task" type="button" value="Incluir" />
 
-      <ul class="list-task">
-
-      </ul>
+      <ul class="list-task"></ul>
     </div>
+
+    <!--BOTÃO MODO DARK OR LIGHT-->
+    <div class="switch">
+      <input type="checkbox" id="toggle">
+      <label for="toggle" class="slider"></label>
+    </div>
+    <!--BOTÃO MODO DARK OR LIGHT-->
+
+    <script src="principal.js"></script>
   </body>
-  <script src="principal.js"></script>
 </html>
