--- a/principal.html
+++ b/principal.html
@@ -21,10 +21,14 @@
     </div>
 
     <!--BOTÃO MODO DARK OR LIGHT-->
+
     <div class="switch">
+      <span class="switch-label">Theme</span>
       <input type="checkbox" id="toggle">
       <label for="toggle" class="slider"></label>
     </div>
+    
+    
     <!--BOTÃO MODO DARK OR LIGHT-->
 
     <script src="principal.js"></script>
